--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "honeycomb",
+  "name": "my_honeycomb",
   "description": "all-in-one task starter app with jsPsych + React + Electron + psiturk ",
   "author": {
-    "name": "Brown CCV",
-    "email": "ccv-bot@brown.edu",
-    "url": "ccv.brown.edu"
+    "name": "Niloufar",
+    "email": "niloufar_razmi@brown.edu"
   },
   "version": "2.3.1",
   "license": "MIT",
   "private": true,
   "main": "public/electron.js",
   "homepage": ".",
-  "repository": "https://github.com/brown-ccv/honeycomb",
+  "repository": "https://github.com/NiloufarRazmi/my_honeycomb",
   "dependencies": {
     "@brown-ccv/behavioral-task-trials": "^2.0.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
